<resources>
    <string name="app_name">ExeriseProject</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="home_header">Coronavirus Overview</string>
    <string name="new_confirmed">New Confirmed</string>
    <string name="totalConfirmed">Total Confirmed</string>
    <string name="newDeaths">New Deaths</string>
    <string name="totalDeaths">Total Deaths</string>
    <string name="totalRecovered">Total Recovered</string>
    <string name="NewRecovered">New Recovered</string>
    <string name="refresh">Refresh</string>
    <string name="lastDate">Confirm Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
